--- a/SQLday_1.ipynb
+++ b/SQLday_1.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "As a warm up, we will start with doing simple queries inside Google Sheets.\n",
         "\n",
-        "We will use this sheet: https://docs.google.com/spreadsheets/d/19ssb71XhlcBrWnoN6a-9702QnSmZzRpt-hnps-yRNwk/edit?usp=sharing (and later another one, at this [link](https://docs.google.com/spreadsheets/d/1FRgX6DR9SRMg2eD_M1Xbl6MFGgaWZfe8XSh5PYDPjJ0/edit?usp=sharing))\n",
+        "We will use this sheet: https://docs.google.com/spreadsheets/d/1ENv-MnZ5Wtl5FywRq8YWN7I5HIKvaQqIxvssqEP9RZk/edit?usp=drive_link (and later another one, at this [link](https://docs.google.com/spreadsheets/d/1FRgX6DR9SRMg2eD_M1Xbl6MFGgaWZfe8XSh5PYDPjJ0/edit?usp=sharing))\n",
         "\n",
         "Sheets have a function `QUERY` that will execute a query in simplified SQL:https://support.google.com/docs/answer/3093343?hl=en\n",
         "\n",
